--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta charset="utf-8" />
 <title>Jintana Cunningham</title>
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
-<link rel="canonical" href="https://montauk-demo.squarespace.com/"/>
+<link rel="canonical"   href="https://montauk-demo.squarespace.com/"/>
 <meta property="og:site_name" content="Jintana"/>
 <meta property="og:title" content="Welcome"/>
 <meta property="og:url" content="https://montauk-demo.squarespace.com/"/>
@@ -147,12 +147,8 @@
     <header id="header" class="clear">
 
     
-
-      <div id="upper-logo">
-        <h1 class="logo" data-content-field="site-title">
-          <a href="/"><img src="//static1.squarespace.com/static/56d73dbac2ea51af9150258f/t/56d73f2e2fe1313f8d5ef325/1491319202711/?format=1500w" alt="Montauk" /></a>
-        </h1>
-      </div>
+ 
+      <div>
       <script>
       if (parseInt(Y.one('body').getComputedStyle('width'),10) <= 640) {
         Y.use('squarespace-ui-base', function(Y) {
