--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="initial-scale=1">
   
  
+<h1> Jintana <h1>	
+	
 <base href="">
 <meta charset="utf-8" />
 <title>Jintana Cunningham</title>
