--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       <!-- // CATEGORY NAV -->
       
 
-      <div class="sqs-layout sqs-grid-12 columns-12" data-type="page" data-updated-on="1457026363199" id="page-56d73ffc859fd045d0337663"><div class="row sqs-row"><div class="col sqs-col-12 span-12"><div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-521fc2bfe4bcda771258"><div class="sqs-block-content"><p class="text-align-left"> I am an artist, writer, and designer at Cornell University. I grew up in Kyoto and China. I am interested at the intersection of technology, art, and social justice. My side hobbies include language-learning, chemical and digital photography, and discovering the latest music. You can reach me at jc2747@cornell.edu. <a href="/index"></a></p><h3 class="text-align-center"><a href="/artists-montauk">View Artists &nbsp;→</a></h3></div></div></div></div></div>
+      <div class="sqs-layout sqs-grid-12 columns-12" data-type="page" data-updated-on="1457026363199" id="page-56d73ffc859fd045d0337663"><div class="row sqs-row"><div class="col sqs-col-12 span-12"><div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-521fc2bfe4bcda771258"><div class="sqs-block-content"><p class="text-align-left"> I am an artist, writer, and designer at Cornell University. I grew up in Kyoto and China. I am interested in the intersection of technology, art, and humanitarian work. My side hobbies include language-learning, chemical and digital photography, and discovering the latest music. You can reach me at jc2747@cornell.edu. <a href="/index"></a></p><h3 class="text-align-center"><a href="/artists-montauk">View Artists &nbsp;→</a></h3></div></div></div></div></div>
 
     </section>
 
