--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
   <meta name="viewport" content="initial-scale=1">
   
  
+<style>
 
+@font-face {
+	font-family: Quicksand;
+	src: url(Quicksand-Regular.otf)
+	}
+	
+#top-name {
+	text-align: center;
+	font-family:;  
+	}
+	
+</style>
+	
 	
 <base href="">
 <meta charset="utf-8" />
@@ -143,6 +156,7 @@
 
       
       <div class="site-info" data-content-field="business-information">
+	<div class="top-name">Jintana Cunningham</div>
         <div class="site-city-state">Ithaca, NY, 14850</div>
 
       </div>
