--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 #top-name {
 	text-align: center;
 	margin-left: 50px;
-	font-size: 70px;
+	font-size: 400%;
 	font-family: Quicksand;
-	color: black;
+	color: green;
 	}
 	
 </style>
