--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           
 
 		
-              <a href="jintanamc.github.io/index.html">Gallery</a>
+              <a href="jintanamc.github.io/gallery.html">Gallery</a>
 		
 		
 		
