--- a/gallery.html
+++ b/gallery.html
@@ -177,9 +177,9 @@ isNaN(b)?!0:a>b};this._resetAlt=function(a,b){var d=a.getAttribute("alt"),c=d&&0
 
       
       <div class="site-info" data-content-field="business-information">
-        <div class="site-address">51 Edgemere Street</div>
-        <div class="site-city-state">Montauk, NY, 11954</div>
-        <div class="site-phone">(800) 123-4567</div>
+  
+        <div class="site-city-state">Ithaca NY</div>
+  
       </div>
       
 
