--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           
 
 		
-              <a href="/gallery.html">Gallery</a>
+              <a href="/gallery2.html">Gallery</a>
 		
 		
 		
