--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	
 #top-name {
 	text-align: center;
-	margin-left: 50px;
+	
 	font-size: 700%;
-	font-family: Quicksand;
-	color: black;
+	<!--font-family: Quicksand;-->
+	color: green;
 	}
 	
 </style>
