--- a/contact.html
+++ b/contact.html
@@ -319,7 +319,7 @@ isNaN(b)?!0:a>b};this._resetAlt=function(a,b){var d=a.getAttribute("alt"),c=d&&0
       <!-- // CATEGORY NAV -->
       
 
-      <div class="sqs-layout sqs-grid-12 columns-12" data-type="page" data-updated-on="1491319202707" id="page-56d75559c6fc0864a0e01ca0"><div class="row sqs-row"><div class="col sqs-col-6 span-6"><div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-ebb91f8c6286d0c5c81f"><div class="sqs-block-content"><h3>Contact</h3><p>Cras mattis consectetur purus sit amet fermentum. Maecenas faucibus mollis interdum. Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.&nbsp;Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.&nbsp;</p></div></div></div><div class="col sqs-col-6 span-6"><div class="sqs-block form-block sqs-block-form" data-block-type="9" id="block-bfde1914caf7d2626029"><div class="sqs-block-content">
+      <div class="sqs-layout sqs-grid-12 columns-12" data-type="page" data-updated-on="1491319202707" id="page-56d75559c6fc0864a0e01ca0"><div class="row sqs-row"><div class="col sqs-col-6 span-6"><div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-ebb91f8c6286d0c5c81f"><div class="sqs-block-content"></div></div></div><div class="col sqs-col-6 span-6"><div class="sqs-block form-block sqs-block-form" data-block-type="9" id="block-bfde1914caf7d2626029"><div class="sqs-block-content">
 
 
 
