--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
     
     <a href="#" class="btn">Contact</a>
-    <a href="#" class="btn">Experience</a>
-    <a href="#" class="btn">About</a>
+    <a href="#" class="btn">Perspectives</a>
+    <a href="product1.html" class="btn">Experience</a>
   
 
 <script>
@@ -156,7 +156,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="text">Lending Library</div>
   </div>
 </div>
-<p> My current project is to help develop Cornell's Lending Library Program.</p>
+<p style=font-size:18px> I'm currently in midst of developing Cornell's new Lending Library Program. This programs consists of textbooks that students can borrow for the semester, particularly those who are low income. I created promotional materials, marketed and distributed, and raised campus awareness of this new program</p>
 
 
 <div class="container">
@@ -165,6 +165,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="text">Prisoner Express</div>
   </div>
 </div>
+<p style=font-size:18px>Summer after my sophomore year I worked full-time at the Prisoner Express Program </p>
   
 <div class="container">
   <img src="download.png" alt="Freelance" class="image" style="width:100%">
@@ -290,9 +291,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 		</div>
 	</div>
 </footer>
-	<script src='Text-2.js'></script>
-	<script src="Text-3.js"></script>
+	<script src="Text-2.js" type="text/javascript"></script>
+	<script src="Text-3.js"type="text/javascript"></script>
 
-    <script src="Text-4.js"></script>
+    <script src="Text-4.js" type="text/javascript">></script>
   </body>
 </html>
