--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
     <title>Jintana Cunningham— Product Designer & Front-end Developer</title>
     <link href="css666.css" rel="stylesheet" type="text/css" />
-    <script src="website2.js"></script>
+    <script src="Text-2.js"></script>
 	 
 <!--	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="typed.js"> </script> -->
