--- a/index.html
+++ b/index.html
@@ -200,19 +200,19 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="protest.jpg" style="width:100%">
-        <img src="train.jpg" style="width:100%">
-        <img src="flower.jpg" style="width:100%">
-				 <img src="sweet.jpg" style="width:100%">
-				 <img src="korea.jpg" style="width:100%">
-				 <img src="falls.jpg" style="width:100%">
+        <img src="protest.JPG" style="width:100%">
+        <img src="train.JPG" style="width:100%">
+        <img src="flower.JPG" style="width:100%">
+				 <img src="sweet.JPG" style="width:100%">
+				 <img src="korea.JPG" style="width:100%">
+				 <img src="falls.JPG" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="tokyo.jpg" style="width:100%">
-        <img src="island2.jpg" style="width:100%">
-        <img src="amy.jpg" style="width:100%">
-        <img src="island.jpg" style="width:100%">
+        <img src="tokyo.JPG" style="width:100%">
+        <img src="island2.JPG" style="width:100%">
+        <img src="amy.JPG" style="width:100%">
+        <img src="island.JPG" style="width:100%">
 				<img src="leaves.jpg" style="width:100%">
       </div>
     <!-- End photo grid -->
