--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <img src="island2.JPG" style="width:100%">
         <img src="amy.JPG" style="width:100%">
         <img src="island.JPG" style="width:100%">
-				<img src="leaves.jpg" style="width:100%">
+				<img src="leaves.JPG" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
@@ -225,11 +225,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2 class="w3-text-dark-grey">Services</h2>
     <hr style="width:200px" class="w3-opacity">
 <ul>
-	<li>
-		<p>Web Design</p>
-		<p> Photo Editing</p>
-		<p> Branding   </p>
-	</li>
+    <li>Web Design</li>
+    <li> Photo Editing</li>
+    <li> Branding  </li>
 	
 </ul>
 
