--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2 class="w3-text-dark-grey">Services</h2>
     <hr style="width:200px" class="w3-opacity">
 <ul>
-    <li>Web Design</li>
-    <li> Photo Editing</li>
-    <li> Branding  </li>
+	<li><p>Web Design</p></li>
+	<li><p> Photo Editing</p></li>
+	<li> <p>Branding</p></li>
 	
 </ul>
 
