--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="row card" style="margin-top:40px;">
               <div class= "four columns">
                 <a href="https://medium.com/@">
-                <img class="mockup" src="images/cusd.png">
+                <img class="mockup" src="cusd.png">
               </a>
               </div>
               <div class="six offset-by-two columns" >
