--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="skeleton.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -56,7 +56,7 @@
           <div id="portfolio" class="twelve column">
             <div class="row end" style="margin-top:40px;">
               <div class= "four columns">
-                <img class="avatar" src="images/headshot2.jpg">
+                <img class="avatar" src="headshot2.jpg">
               </a>
               </div>
               <div class="six offset-by-two columns" >
