--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div id="portfolio" class="twelve column">
             <div class="row card" style="margin-top:40px;">
               <div class= "four columns">
-                <a href="https://medium.com/@">
+                <a href="...">
                 <img class="mockup" src="cusd.png">
               </a>
               </div>
