--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </h6>
                 <h6 style="margin-bottom: 20px"> In Fall of 2017, I was accepted to the CUSD project team at Cornell University, joining their Technical Operations team. 
                 </h6>
-                <a class="button" href="https://medium.com/">Read</a>
+                <a class="button" href="https://medium.com/">View</a>
               </div>
             </div>
           </div>
@@ -82,7 +82,7 @@
               <div id="portfolio" class="twelve column">
                 <div class="row card" style="margin-top:40px;">
                   <div class= "four columns">
-                    <img class="mockup" src="images/prisonerexpress.jpg">
+                    <img class="mockup" src="prisonerexpress.jpg">
                   </div>
                   <div class="six offset-by-two columns" >
                       <h5 class="u-dark" style="margin-bottom: 10px">Prisoner Express Program</h5>
@@ -90,7 +90,7 @@
                     </h6>
                     <h6 style="margin-bottom: 20px">I redesigned the organization's website increasing views by 3x. I also designed educational newsletters that reached 5000+ prisoners across the country.
                     </h6>
-                    <h6>More details coming soon.
+                    <h6><a class="button" href="https://medium.com/">View</a>
                     </h6>
                   </div>
                 </div>
@@ -113,7 +113,7 @@
                         </h6>
                         <h6 style="margin-bottom: 20px">On campus I collaborate with a group of students to create a magazine.
                         </h6>
-                        <h6>Case study coming soon.
+                        <h6><a class="button" href="https://medium.com/">View</a>
                         </h6>
                       </div>
                     </div>
@@ -138,7 +138,7 @@
                 </h6>
                 <h6 style="margin-bottom: 20px">During my semester abroad I taught English to kindergarteners in Bangkok, Thailand.
                 </h6>
-                <h6 style="margin-bottom: 20px">Case study coming soon. 
+                <h6 style="margin-bottom: 20px"><a class="button" href="https://medium.com/">View</a> 
                 </h6>
                 <a class="button" href="htt616758?mt=8">Read</a>
               </div>
@@ -154,8 +154,8 @@
             <div id="portfolio" class="twelve column">
               <div class="row end" style="margin-top:40px">
                 <div class= "four columns">
-                  <a href="https://medium.com/@tkkong/ride-ithaca-enabling-users-to-ride-the-tcat-bus-easily-5f0f24554b0c">
-                  <img class="mockup" src="images/rideIthaca.png">
+                  <a href="ht">
+                  <img class="mockup" src="imagaca.png">
                 </a>
                 </div>
                 <div class="six offset-by-two columns" >
