--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </h6>
                 <h6 style="margin-bottom: 20px">During my semester abroad I taught English to kindergarteners in Bangkok, Thailand.
                 </h6>
-                <h6 style="margin-bottom: 20px"><a class="button" href="https://medium.com/">View</a> 
+                <h6 style="margin-bottom: 20px">
                 </h6>
                 <a class="button" href="htt616758?mt=8">Read</a>
               </div>
