--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang-"en">
 <head>
@@ -24,8 +23,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="skeleton.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -39,7 +38,7 @@
       <div class="row">
         <div class="twelve columns">
           <a href="index.html"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
-          <h4 style="margin-bottom:35px">I'm an aspiring product designer from Beijing now studying Information Science at Cornell.</h4>
+          <h4 style="margin-bottom:35px">I'm an aspiring product designer from Beijing studying Information Science at Cornell.</h4>
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index.html>Portfolio</a></li>
             <li class="u-grey"><a href=about.html>About</a></li>
@@ -52,14 +51,38 @@
     </div>
 </div>
 
+<!--
 <div class="section-work" style="background-color:#FCFCFC">
       <div class="container">
         <div class="row">
           <div id="portfolio" class="twelve column">
             <div class="row card" style="margin-top:40px;">
               <div class= "four columns">
-                <a href="...">
-                <img class="mockup" src="cusd.png">
+                <a href="cusd.html">
+                <img class="mockup" src="images/cus.png">
+              </a>
+              </div>
+              <div class="six offset-by-two columns" >
+                  <h5 class="u-dark" style="margin-bottom: 10px">LinkedIn Redesign Concept</h5>
+                <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
+                </h6>
+                <a class="button" href="linkedin.html">View</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+
+
+<div class="section-work" style="background-color:#FCFCFC">
+      <div class="container">
+        <div class="row">
+          <div id="portfolio" class="twelve column">
+            <div class="row card" style="margin-top:40px;">
+              <div class= "four columns">
+                <a href="cusd.html">
+                <img class="mockup" src="images/cusd.png">
               </a>
               </div>
               <div class="six offset-by-two columns" >
@@ -68,7 +91,7 @@
                 </h6>
                 <h6 style="margin-bottom: 20px"> In Fall of 2017, I was accepted to the CUSD project team at Cornell University, joining their Technical Operations team. 
                 </h6>
-                <a class="button" href="https://medium.com/">View</a>
+                <a class="button" href="cusd.html">View</a>
               </div>
             </div>
           </div>
@@ -82,7 +105,7 @@
               <div id="portfolio" class="twelve column">
                 <div class="row card" style="margin-top:40px;">
                   <div class= "four columns">
-                    <img class="mockup" src="prisonerexpress.jpg">
+                    <img class="mockup" src="images/prisonerexpress.jpg">
                   </div>
                   <div class="six offset-by-two columns" >
                       <h5 class="u-dark" style="margin-bottom: 10px">Prisoner Express Program</h5>
@@ -90,7 +113,7 @@
                     </h6>
                     <h6 style="margin-bottom: 20px">I redesigned the organization's website increasing views by 3x. I also designed educational newsletters that reached 5000+ prisoners across the country.
                     </h6>
-                    <h6><a class="button" href="https://medium.com/">View</a>
+                    <a class="button" href="prisonexp.html">View</a>
                     </h6>
                   </div>
                 </div>
@@ -105,7 +128,7 @@
                   <div id="portfolio" class="twelve column">
                     <div class="row card" style="margin-top:40px;">
                       <div class= "four columns">
-                        <img class="mockup" src="thread.jpg">
+                        <img class="mockup" src="images/thread.jpg">
                       </div>
                       <div class="six offset-by-two columns" >
                           <h5 class="u-dark" style="margin-bottom: 10px">Thread Magazine</h5>
@@ -113,8 +136,7 @@
                         </h6>
                         <h6 style="margin-bottom: 20px">On campus I collaborate with a group of students to create a magazine.
                         </h6>
-                        <h6><a class="button" href="https://medium.com/">View</a>
-                        </h6>
+                        <a class="button" href="thread.html">View</a>
                       </div>
                     </div>
                   </div>
@@ -128,19 +150,17 @@
           <div id="portfolio" class="twelve column">
               <div class="row card" style="margin-top:40px">
               <div class= "four columns">
-                <a href="https:616758?mt=8">
-                <img class="mockup" src="images/within.png">
+                <img class="mockup" src="images/issaranon.png">
               </a>
               </div>
               <div class="six offset-by-two columns" >
                   <h5 class="u-dark" style="margin-bottom: 10px">Issaranon Kindergarten</h5>
-                <h6 class="u-grey" style="margin-bottom: 20px">Jun 2017
+                <h6 class="u-grey" style="margin-bottom: 20px">Spring 2016
                 </h6>
                 <h6 style="margin-bottom: 20px">During my semester abroad I taught English to kindergarteners in Bangkok, Thailand.
                 </h6>
-                <h6 style="margin-bottom: 20px">
+                <h6 style="margin-bottom: 20px">Report coming soon. 
                 </h6>
-                <a class="button" href="htt616758?mt=8">Read</a>
               </div>
             </div>
           </div>
@@ -154,17 +174,17 @@
             <div id="portfolio" class="twelve column">
               <div class="row end" style="margin-top:40px">
                 <div class= "four columns">
-                  <a href="ht">
-                  <img class="mockup" src="imagaca.png">
+                  <img class="mockup" src="images/wireframe.png">
                 </a>
                 </div>
                 <div class="six offset-by-two columns" >
                     <h5 class="u-dark" style="margin-bottom: 10px">Freelance</h5>
-                  <h6 class="u-grey" style="margin-bottom: 20px">Sep 2016 to Present
+                  <h6 class="u-grey" style="margin-bottom: 20px">Sep 2017 to Present
                   </h6>
                   <h6 style="margin-bottom: 20px">I offer my skills and services to the local community. I am always looking for the latest challenge and task to take on.
                   </h6>
-                  <a class="button" href="https://medium.com/@c">Read</a>
+                  <h6 style="margin-bottom: 20px">Coming soon. 
+                </h6>              
                 </div>
               </div>
             </div>
