--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="skeleton.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -56,7 +56,7 @@
           <div id="portfolio" class="twelve column">
             <div class="row end" style="margin-top:40px;">
               <div class= "four columns">
-                <img class="avatar" src="headshot2.jpg">
+                <img class="avatar" src="images/headshot2.jpg">
               </a>
               </div>
               <div class="six offset-by-two columns" >
@@ -64,10 +64,8 @@
                 <h6 style="margin-bottom: 20px">Hello!
                 </h6>
                 <h6 style="margin-bottom: 20px">My name is Jintana Cunningham, and I am a sophomore at Cornell studying Information Science with a minor in business.
-                <h6 style="margin-bottom: 20px">I grew up in China, Thailand, and Japan.....
                 </h6>
-                </h6>
-                <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University </a>
+                <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University. </a>
                 </h6>
                 <h6 style="margin-bottom: 20px">In my free time, I like to read Nabokov, hike, and explore local art museums with my DSLR.
                 </h6>
