--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="skeleton.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -82,7 +82,7 @@
             <div class="row card" style="margin-top:40px;">
               <div class= "four columns">
                 <a href="cusd.html">
-                <img class="mockup" src="images/cusd.png">
+                <img class="mockup" src="cusd.png">
               </a>
               </div>
               <div class="six offset-by-two columns" >
@@ -105,7 +105,7 @@
               <div id="portfolio" class="twelve column">
                 <div class="row card" style="margin-top:40px;">
                   <div class= "four columns">
-                    <img class="mockup" src="images/prisonerexpress.jpg">
+                    <img class="mockup" src="prisonerexpress.jpg">
                   </div>
                   <div class="six offset-by-two columns" >
                       <h5 class="u-dark" style="margin-bottom: 10px">Prisoner Express Program</h5>
@@ -128,7 +128,7 @@
                   <div id="portfolio" class="twelve column">
                     <div class="row card" style="margin-top:40px;">
                       <div class= "four columns">
-                        <img class="mockup" src="images/thread.jpg">
+                        <img class="mockup" src="thread.jpg">
                       </div>
                       <div class="six offset-by-two columns" >
                           <h5 class="u-dark" style="margin-bottom: 10px">Thread Magazine</h5>
@@ -150,7 +150,7 @@
           <div id="portfolio" class="twelve column">
               <div class="row card" style="margin-top:40px">
               <div class= "four columns">
-                <img class="mockup" src="images/issaranon.png">
+                <img class="mockup" src="issaranon.png">
               </a>
               </div>
               <div class="six offset-by-two columns" >
