--- a/thread.html
+++ b/thread.html
@@ -23,8 +23,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="skeleton.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -43,7 +43,7 @@
             <li class="u-grey"><a href=about.html>About</a></li>
             <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
             <li class="u-grey"><a target="_blank" href="photography.html">Photography</a></li>
-            <li class="u-grey"><a target="_blank" href="hhttps://www.linkedin.com/in/jintana-cunningham/">LinkedIn</a></li>
+            <li class="u-grey"><a target="_blank" href="https://www.linkedin.com/in/jintana-cunningham/">LinkedIn</a></li>
             <li class="u-grey"><a target="_blank" href="mailto:jc2747@cornell.edu">Email</a></li>
         </div>
       </div>
@@ -54,14 +54,14 @@
 <div class="info"
 <p><strong>Thread Magazine</strong> is Cornell University's premier fashion magazine. Every semester, our magazine centers around a certain theme, such as the environment, identity, and escapism. Fashion encompasses many faces and we strive to do the same. We go beyond the boundaries of 'trendy' and 'stylish', using apparel as a medium of expression to mark cultural conversations.
 We see hair and makeup as physical manifestations of human feeling, emotion and experience. Beauty is dynamic and multi-faceted.</p> </div>
-<img class = "center" src="images/thread2.jpg">
+<img class = "center" src="thread2.jpg">
 <div class="info">
   <p> Thread is a fashion magazine that acts like a design organization, thought platform, and artistic collective. We look to explore and showcase the breadth of creativity at Cornell University. Our work reaches an audience of 1800+.
 
 </p>
 
 </br>
-  <img class = "center" src="images/threadPNG.jpg">
+  <img class = "center" src="threadPNG.jpg">
   
 <p>We translate visual inspirations into paper medium, evoking and enhancing thematic elements in every decision, making this magazine not only a publication but a work of art.</p>
 </div>
