--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                     </h6>
                     <h6 style="margin-bottom: 20px">I redesigned the organization's website increasing views by 3x. I also designed educational newsletters that reached 5000+ prisoners across the country.
                     </h6>
-                    <a class="button" href="prisonexp.html">View</a>
+                   <!-- <a class="button" href="prisonexp.html">View</a> -->
+                    <a class="button" href="https://medium.com/@jc2747/problem-solving-at-prisoner-express-371317115dc6">View</a>
                     </h6>
                   </div>
                 </div>
