--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </h6>
                 <h6 style="margin-bottom: 20px"> In Fall of 2017, I was accepted to the CUSD project team at Cornell University, joining their Technical Operations team. 
                 </h6>
-                <a class="button" href="cusd.html">View</a>
+                <a class="button" href="https://medium.com/@jc2747/designing-a-hub-for-cornell-sustainable-design-b961b7952008">View</a>
               </div>
             </div>
           </div>
@@ -135,7 +135,7 @@
                           <h5 class="u-dark" style="margin-bottom: 10px">Thread Magazine</h5>
                         <h6 class="u-grey" style="margin-bottom: 20px">Spring 2017
                         </h6>
-                        <h6 style="margin-bottom: 20px">On campus I collaborate with a group of students to create a magazine.
+                        <h6 style="margin-bottom: 20px">On campus I collaborate with a diverse group of students to create a fashion magazine.
                         </h6>
                         <a class="button" href="thread.html">View</a>
                       </div>
