--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
           <div id="portfolio" class="twelve column">
             <div class="row end" style="margin-top:40px;">
               <div class= "four columns">
-                <img class="avatar" src="images/headshot2.jpg">
+                <img class="avatar" src="headshot2.jpg">
               </a>
               </div>
               <div class="six offset-by-two columns" >
