--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index.html>Portfolio</a></li>
             <li class="u-grey"><a href=about.html>About</a></li>
-            <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
+            <li class="u-grey"><a target="_blank" href="JRESUME.pdf">Resume</a></li>
             <li class="u-grey"><a target="_blank" href="https://www.linkedin.com/in/jintana-cunningham/">LinkedIn</a></li>
             <li class="u-grey"><a target="_blank" href="mailto:jc2747@cornell.edu">Email</a></li>
         </div>
