--- a/photography.html
+++ b/photography.html
@@ -52,15 +52,15 @@
 </div>
 
 
- <img class = "horiz-right" src="images/tokyo.jpg" width="450">
+ <img class = "horiz-right" src="tokyo.jpg" width="450">
 
- <img class = "horiz-left" src="images/sweet.jpg" width="450">
+ <img class = "horiz-left" src="sweet.jpg" width="450">
     
-  <img class="vert-left" src="images/amy.jpg" width="300">
- <img class="horiz-right" src="images/korea.jpg">
-  <img class="horiz-left" src="images/island2.jpg">
-  <img class="vert-right" src="images/leaves.jpg">
-  <img class="horiz-left" src="images/falls.jpg">
+  <img class="vert-left" src="amy.jpg" width="300">
+ <img class="horiz-right" src="korea.jpg">
+  <img class="horiz-left" src="island2.jpg">
+  <img class="vert-right" src="leaves.jpg">
+  <img class="horiz-left" src="falls.jpg">
  
   
 </body>
