--- a/photography.html
+++ b/photography.html
@@ -56,11 +56,11 @@
 
  <img class = "horiz-left" src="sweet.jpg" width="450">
     
-  <img class="vert-left" src="amy.jpg" width="300">
- <img class="horiz-right" src="korea.jpg">
-  <img class="horiz-left" src="island2.jpg">
-  <img class="vert-right" src="leaves.jpg">
-  <img class="horiz-left" src="falls.jpg">
+  <img class="vert-left" src="amy.JPG" width="300">
+ <img class="horiz-right" src="korea.JPG">
+  <img class="horiz-left" src="island2.JPG">
+  <img class="vert-right" src="leaves.JPG">
+  <img class="horiz-left" src="falls.JPG">
  
   
 </body>
