--- a/photography.html
+++ b/photography.html
@@ -52,9 +52,9 @@
 </div>
 
 
- <img class = "horiz-right" src="tokyo.jpg" width="450">
+ <img class = "horiz-right" src="tokyo.JPG" width="450">
 
- <img class = "horiz-left" src="sweet.jpg" width="450">
+ <img class = "horiz-left" src="sweet.JPG" width="450">
     
   <img class="vert-left" src="amy.JPG" width="300">
  <img class="horiz-right" src="korea.JPG">
