--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li class="u-grey"><a href=index.html>Portfolio</a></li>
             <li class="u-grey"><a href=about.html>About</a></li>
             <li class="u-grey"><a target="_blank" href="JRESUME.pdf">Resume</a></li>
-            <li class="u-grey"><a target="_blank" href="photography.html">Photography</a></li>
+          <!--  <li class="u-grey"><a target="_blank" href="photography.html">Photography</a></li>-->
             <li class="u-grey"><a target="_blank" href="https://www.linkedin.com/in/jintana-cunningham/">LinkedIn</a></li>
             <li class="u-grey"><a target="_blank" href="mailto:jc2747@cornell.edu">Email</a></li>
         </div>
@@ -169,7 +169,7 @@
         </div>
       </div>
 
-<div class="section-work" style="background-color:#FCFCFC">
+<!--<div class="section-work" style="background-color:#FCFCFC">
         <div class="container">
           <div class="row">
             <div id="portfolio" class="twelve column">
@@ -191,7 +191,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
 </body>
