--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div id="portfolio" class="twelve column">
                 <div class="row card" style="margin-top:40px;">
                   <div class= "four columns">
-                    <img class="mockup" src="prisonerexpress.jpg">
+                    <img class="mockup" src="prisonerexp.PNG">
                   </div>
                   <div class="six offset-by-two columns" >
                       <h5 class="u-dark" style="margin-bottom: 10px">Prisoner Express Program</h5>
