--- a/index.html
+++ b/index.html
@@ -74,6 +74,32 @@
       </div>
     </div> -->
 
+  
+     <div class="section-work" style="background-color:#FCFCFC">
+          <div class="container">
+            <div class="row">
+              <div id="portfolio" class="twelve column">
+                <div class="row card" style="margin-top:40px;">
+                  <div class= "four columns">
+                    <img class="mockup" src="youresearch.PNG">
+                  </div>
+                  <div class="six offset-by-two columns" >
+                      <h5 class="u-dark" style="margin-bottom: 10px">YouResearch</h5>
+                    <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
+                    </h6>
+                    <h6 style="margin-bottom: 20px">Selected as YouResearch's Web Developer Director, I redesigned the organization's website.
+                    </h6>
+                   <!-- <a class="button" href="prisonexp.html">View</a> -->
+                    <a class="button" href="https://medium.com/@jc2747/problem-solving-at-prisoner-express-371317115dc6">View</a>
+                    </h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> 
+  
+  
 
 <div class="section-work" style="background-color:#FCFCFC">
       <div class="container">
@@ -179,7 +205,7 @@
                 </a>
                 </div>
                 <div class="six offset-by-two columns" >
-                    <h5 class="u-dark" style="margin-bottom: 10px">Freelance</h5>
+                    <h5 class="u-dark" style="margin-bottom: 10px">Other Work</h5>
                   <h6 class="u-grey" style="margin-bottom: 20px">Sep 2017 to Present
                   </h6>
                   <h6 style="margin-bottom: 20px">I offer my skills and services to the local community. I am always looking for the latest challenge and task to take on.
