--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="twelve columns">
           <a href="index.html"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
-          <h4 style="margin-bottom:35px">I'm an aspiring product designer from Beijing studying Information Science at Cornell.</h4>
+          <h4 style="margin-bottom:35px">I'm an aspiring web designer from Beijing studying Information Science at Cornell.</h4>
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index.html>Portfolio</a></li>
             <li class="u-grey"><a href=about.html>About</a></li>
@@ -72,7 +72,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div> 
 
   
      <div class="section-work" style="background-color:#FCFCFC">
@@ -99,7 +99,7 @@
           </div>
         </div> 
   
-  
+  -->
 
 <div class="section-work" style="background-color:#FCFCFC">
       <div class="container">
@@ -140,7 +140,7 @@
                     <h6 style="margin-bottom: 20px">I redesigned the organization's website increasing views by 3x. I also designed educational newsletters that reached 5000+ prisoners across the country.
                     </h6>
                    <!-- <a class="button" href="prisonexp.html">View</a> -->
-                    <a class="button" href="https://medium.com/@jc2747/problem-solving-at-prisoner-express-371317115dc6">View</a>
+                    <a class="button" href="https://prisonerexpress.org">View</a>
                     </h6>
                   </div>
                 </div>
