--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </h6>
                     <h6 style="margin-bottom: 20px">Selected as YouResearch's Web Developer Director, I redesigned the organization's website.
                     </h6>
-                   <!-- <a class="button" href="prisonexp.html">View</a> -->
+                   <!-- <a class="button" href="prisonexp.html">View</a> 
                     <a class="button" href="https://medium.com/@jc2747/problem-solving-at-prisoner-express-371317115dc6">View</a>
                     </h6>
                   </div>
