--- a/photography.html
+++ b/photography.html
@@ -45,7 +45,7 @@
             <li class="u-grey"><a target="_blank" href="jresume.pdf">Resume</a></li>
             <li class="u-grey"><a target="_blank" href="photography.html">Photography</a></li>
             <li class="u-grey"><a target="_blank" href="hhttps://www.linkedin.com/in/jintana-cunningham/">LinkedIn</a></li>
-            <li class="u-grey"><a target="_blank" href="mailto:jc2747@cornell.edu">Email</a></li>
+            <li class="u-grey"><a target="_blank" href="https://www.behance.net/jc274746af">Behance</a></li>
         </div>
       </div>
     </div>
