--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <li class="u-grey"><a href=about.html>About</a></li>
             <li class="u-grey"><a target="_blank" href="JRESUME.pdf">Resume</a></li>
             <li class="u-grey"><a target="_blank" href="https://www.linkedin.com/in/jintana-cunningham/">LinkedIn</a></li>
-            <li class="u-grey"><a target="_blank" href="mailto:jc2747@cornell.edu">Email</a></li>
+            <li class="u-grey"><a target="_blank" href="https://www.behance.net/jc274746af">Behance</a></li>
         </div>
       </div>
     </div>
