--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                       <h5 class="u-dark" style="margin-bottom: 10px">Prisoner Express Program</h5>
                     <h6 class="u-grey" style="margin-bottom: 20px">Summer 2017
                     </h6>
-                    <h6 style="margin-bottom: 20px">I redesigned the organization's website increasing views by 3x. I also designed educational newsletters that reached 5000+ prisoners across the country.
+                    <h6 style="margin-bottom: 20px">I helped redesign the organization's website, increasing views by 3x. I also designed educational newsletters that reached 5000+ prisoners across the country.
                     </h6>
                    <!-- <a class="button" href="prisonexp.html">View</a> -->
                     <a class="button" href="https://prisonerexpress.org">View</a>
