--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 </div>
 
 
-<!--
->>>>>>> 12839ac928b425b0897b67d75720094ceb562783
+
 <div class="section-work" style="background-color:#FCFCFC">
       <div class="container">
         <div class="row">
@@ -60,8 +59,8 @@
             <div class="row card" style="margin-top:40px;">
               <div class= "four columns">
                 <a href="cusd.html">
-<<<<<<< HEAD
-                <img class="mockup" src="images/YouResearch.PNG">
+
+                <img class="mockup" src="images/YouResearch.png">
               </a>
               </div>
               <div class="six offset-by-two columns" >
@@ -70,53 +69,14 @@
                 </h6>
                 <h6 style="margin-bottom: 20px"> Implemented Website Redesign for a student-run non-profit   </h6>
                 <a class="button" href="yr.html">View</a>
-=======
-                <img class="mockup" src="images/cus.png">
-              </a>
-              </div>
-              <div class="six offset-by-two columns" >
-                  <h5 class="u-dark" style="margin-bottom: 10px">LinkedIn Redesign Concept</h5>
-                <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
-                </h6>
-                <a class="button" href="linkedin.html">View</a>
->>>>>>> 12839ac928b425b0897b67d75720094ceb562783
               </div>
             </div>
           </div>
-        </div>
-      </div>
-<<<<<<< HEAD
-    </div>
-
-=======
-    </div>
-
-
-     <div class="section-work" style="background-color:#FCFCFC">
-          <div class="container">
-            <div class="row">
-              <div id="portfolio" class="twelve column">
-                <div class="row card" style="margin-top:40px;">
-                  <div class= "four columns">
-                    <img class="mockup" src="youresearch.PNG">
-                  </div>
-                  <div class="six offset-by-two columns" >
-                      <h5 class="u-dark" style="margin-bottom: 10px">YouResearch</h5>
-                    <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
-                    </h6>
-                    <h6 style="margin-bottom: 20px">Selected as YouResearch's Web Developer Director, I redesigned the organization's website.
-                    </h6>
-                   <!-- <a class="button" href="prisonexp.html">View</a>
-                    <a class="button" href="https://medium.com/@jc2747/problem-solving-at-prisoner-express-371317115dc6">View</a>
-                    </h6>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
-        </div>
+          </div>
+          </div>
 
-  -->
+
 
 
 <div class="section-work" style="background-color:#FCFCFC">
@@ -163,7 +123,7 @@
 
                     <h6 style="margin-bottom: 20px">I helped redesign the organization's website, increasing views by 3x. I also designed educational newsletters that reached 5000+ prisoners across the country.
                     </h6>
-                   <!-- <a class="button" href="prisonexp.html">View</a> -->
+
                     <a class="button" href="https://prisonerexpress.org">View</a>
 
                     </h6>
