--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
               <div class= "four columns">
                 <a href="cusd.html">
 
-                <img class="mockup" src="images/YouResearch.png">
+                <img class="mockup" src="images/youresearch.png">
               </a>
               </div>
               <div class="six offset-by-two columns" >
                   <h5 class="u-dark" style="margin-bottom: 10px">YouResearch Redesign</h5>
                 <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
                 </h6>
-                <h6 style="margin-bottom: 20px"> Implemented Website Redesign for a student-run non-profit   </h6>
+                <h6 style="margin-bottom: 20px"> Implemented Website Redesign for a student-run non-profit.   </h6>
                 <a class="button" href="yr.html">View</a>
               </div>
             </div>
