--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div id="portfolio" class="twelve column">
             <div class="row card" style="margin-top:40px;">
               <div class= "four columns">
-                <a href="cusd.html">
+                <a href="yr.html">
 
                 <img class="mockup" src="images/youresearch.png">
               </a>
